# thought-box

./: .gitignore  LICENSE.txt  README.md  index.html  main.py  package.json  pnpm-lock.yaml  pyproject.toml  tailwind.config.js  vite.config.js
app/: __init__.py  app.py
app/core/: __init__.py  logic.py
app/database/: __init__.py  db.py
app/models/: __init__.py  entry.py  user.py
app/pages/: __init__.py  dashboard.py  entry.py  profile.py
app/pages/components/: __init__.py  user_details.py  user_settings.py
app/storage/: config.json  main.db
app/utils/: __init__.py  color_theme.py  json.py
src/: App.css  App.jsx  main.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: header.jsx  sideNav.jsx
src/hooks/: api.jsx
src/pages/: dashboard.jsx  profile.jsx
